jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: new-jenkins3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: jenkins-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Jenkins External'
spec:
  tls:
    - hosts:
        - jenkins.example.com
      secretName: jenkins-tls-secret
  rules:
    - host: jenkins.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkinsnew-3
                port:
                  number: 8080
          - path: /external
            pathType: Prefix
            backend:
              service:
                name: jenkins-gcp-instance
                port:
                  number: 8080
